--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>"Di antara kamu dan langit, ada cinta yang tak terbatas, harapan yang tak terhingga, dan masa depan yang penuh dengan warna. Selamat ulang tahun, semoga hidupmu selalu bersinar cerah."</p>
     <div class="gif-container">
         <!-- Ganti 'link-ke-gif' dengan URL GIF yang ingin kamu tampilkan -->
-        <img src="/images/us.gif" alt="Ututututuu" class="gif">
+        <img src="../images/us.gif" alt="Ututututuu" class="gif">
     </div>
 </section>
 
