--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
+    <section class="hero" style="background-image: url('/images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
     background-position: center; /* Memposisikan gambar di tengah */
     background-repeat: no-repeat; /* Menghindari pengulangan gambar */">  <div class="star"></div>
     <div class="star"></div>
@@ -51,7 +51,7 @@
     <p>"Di antara kamu dan langit, ada cinta yang tak terbatas, harapan yang tak terhingga, dan masa depan yang penuh dengan warna. Selamat ulang tahun, semoga hidupmu selalu bersinar cerah."</p>
     <div class="gif-container">
         <!-- Ganti 'link-ke-gif' dengan URL GIF yang ingin kamu tampilkan -->
-        <img src="images/us.gif" alt="Ututututuu" class="gif">
+        <img src="/images/us.gif" alt="Ututututuu" class="gif">
     </div>
 </section>
 
