--- a/index.html
+++ b/index.html
@@ -88,14 +88,13 @@
         <h2>Kontak Saya</h2>
         <p>Anda dapat menghubungi saya melalui:</p>
         <ul>
-            <li>Email: <a href="mailto:email@example.com">email@example.com</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/namaanda">LinkedIn Saya</a></li>
+            <li>LinkedIn: <a href="https://www.instagram.com/shirokamii1/?locale=gb&hl=en">Amii</a></li>
         </ul>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Nama Anda. Semua hak dilindungi.</p>
+        <p>&copy; 2024 Amii The Wolf. Semua hak dilindungi.</p>
     </footer>
 
     <script src="js/script.js"></script>
