--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="projects section" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
     background-position: center; /* Memposisikan gambar di tengah */
     background-repeat: no-repeat; /* Menghindari pengulangan gambar */">
-        <h2>Projek Saya</h2>
+        <h2>Ayang suka surprise gak?</h2>
         <div class="project-cards">
             <!-- Kartu projek -->
             <div class="project-cards">
@@ -85,8 +85,8 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
-        <h2>Kontak Saya</h2>
-        <p>Anda dapat menghubungi saya melalui:</p>
+        <h2>HBD, Semoga suka yaa...sama hadiahnya :></h2>
+        <p>This project was made by</p>
         <ul>
             <li>LinkedIn: <a href="https://www.instagram.com/shirokamii1/?locale=gb&hl=en">Amii</a></li>
         </ul>
