--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul class="nav-links">
                     <li><a href="#about">Tentang</a></li>
                     <li><a href="#projects">Projek</a></li>
-                    <li><a href="#contact">Kenangan</a></li>
+                    <li><a href="#contact">Surprise</a></li>
                 </ul>
             </nav>
         </div>
