--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
+    <section class="hero" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
     background-position: center; /* Memposisikan gambar di tengah */
     background-repeat: no-repeat; /* Menghindari pengulangan gambar */">  <div class="star"></div>
     <div class="star"></div>
