--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#about">Tentang</a></li>
-                    <li><a href="#projects">Projek</a></li>
-                    <li><a href="#contact">Surprise</a></li>
+                    <li><a href="#projects section">Projek</a></li>
+                    <li><a href="#contact">Penutup</a></li>
                 </ul>
             </nav>
         </div>
