--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </section>
 
 
-    <section class="projects section" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
+    <section class="projects section" id="projects section" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
     background-position: center; /* Memposisikan gambar di tengah */
     background-repeat: no-repeat; /* Menghindari pengulangan gambar */">
         <h2>Ayang suka surprise gak?</h2>
