--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <p>"Di antara kamu dan langit, ada cinta yang tak terbatas, harapan yang tak terhingga, dan masa depan yang penuh dengan warna. Selamat ulang tahun, semoga hidupmu selalu bersinar cerah."</p>
     <div class="gif-container">
         <!-- Ganti 'link-ke-gif' dengan URL GIF yang ingin kamu tampilkan -->
-        <img src="/images/us.gif" alt="Ututututuu" class="gif">
+        <img src="images/us.gif" alt="Ututututuu" class="gif">
     </div>
 </section>
 
 
-    <section class="projects section" id="projects" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
+    <section id="projects" class="projects section" style="background-image: url('images/1396761.jpg'); background-size: cover; /* Agar gambar mengisi seluruh background */
     background-position: center; /* Memposisikan gambar di tengah */
     background-repeat: no-repeat; /* Menghindari pengulangan gambar */">
         <h2>Ayang suka surprise gak?</h2>
