--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="card">
                     <h3>Ini juga yaa!!</h3>
                     <p>Semoga suka yaa!!</p>
-                    <a href="https://wa.link/8kz0r4">Klik disini</a>
+                    <a href="https://wa.link/8kz0r4" target="_blank">Klik disini</a>
                 </div>
             </div>
         </div>
